--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/yms
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:8085/yms
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=clave
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
